@@ -1,6 +1,6 @@
 {
   "name": "simp-rkhunter",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": "SIMP Team",
   "summary": "A SIMP puppet module for managing rkhunter",
   "license": "Apache-2.0",
@@ -13,11 +13,11 @@
   "dependencies": [
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.14.1 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     }
   ],
   "operatingsystem_support": [
@@ -58,7 +58,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
